# onevpl-examples

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  copy.sh  hello-encode  hello-encode.cpp  hello_encode.cpp  hello_encode.py  statsplotter.py
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  lint.yml
src/: main.cpp  mapping.cpp  mapping.hpp  statistics.cpp  statistics.hpp  utils.hpp  video_encoder.cpp  video_encoder.hpp
src/encodeapp/: main.cpp
src/mapping/: mapping.hpp
src/statistics/: statistics.cpp  statistics.hpp
src/video_encoder/: video_encoder.cpp  video_encoder.hpp
tests/: CMakeLists.txt  statistics_test.cpp  test_encoding.cpp  video_encoder_test.cpp
